--- a/market.api/market.api.csproj
+++ b/market.api/market.api.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Migrations\" />
     <Folder Include="Repositories\Admin\" />
   </ItemGroup>
 
